<resources>
    <string name="app_name">CriminalIntention</string>
    <string name="crime_title_hint">Enter a title of crime</string>
    <string name="crime_detail_label">Details</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_solved_label">Solved</string>
    <string name="date_picker_title">Pick Date</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="show_test_1">test item</string>
    <string name="subtitle_format">%d Crime(s)</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="choose_suspect">Choose Suspect</string>
    <string name="send_crime_report">Send Crime Report</string>
    <string name="crime_report_solved">The crime is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">There is no suspect.</string>
    <string name="crime_report_with_suspect">The suspect is %s.</string>
    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s
    </string>

    <string name="crime_report_subject">CriminalIntention Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="suggest_add_first_crime">Add first crime using add icon on menu bar</string>
    <string name="call_suspect_crime">Call Suspect</string>
    <string name="denied_permission_to_call">Permission request to call was denied</string>
</resources>
